@@ -2,30 +2,27 @@ package consoleApp.java;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
-import java.util.Collections;
+import java.io.ByteArrayOutputStream;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
 
 public class Tests {
 
-    private Grep grep;
-
     @Test
     public void simpleTest() { //grep GoodBye simpleTest.txt
-        grep = new Grep(false, false, false, "GoodBye", "simpleTest.txt");
-        List<String> actual = grep.textFilter(grep);
-        List<String> expected = Arrays.asList("текст текст GoodBye", "GoodBye");
-        assertEquals(expected, actual);
+        Grep grep = new Grep(false, false, false, "GoodBye", "simpleTest.txt", new ByteArrayOutputStream());
+        grep.textFilter();
+        /*
+         expected = List.of("текст текст GoodBye", "GoodBye");
+        assertEquals(expected, actual);*/
     }
 
     @Test
     public void v_Test() { //grep -v GoodBye simpleTest.txt
-        grep = new Grep(true, false, false, "GoodBye", "simpleTest.txt");
-        List<String> actual = grep.textFilter(grep);
-        List<String> expected = Arrays.asList(
+        Grep grep = new Grep(true, false, false, "GoodBye", "simpleTest.txt");
+        List<String> actual = grep.textFilter();
+        List<String> expected = List.of(
                 "тест текст",
                 "GoodBee текст",
                 "текст текст GOODBYE",
@@ -36,9 +33,9 @@ public class Tests {
 
     @Test
     public void i_Test() { //grep -i GoodBye simpleTest.txt
-        grep = new Grep(false, true, false, "GoodBye", "simpleTest.txt");
-        List<String> actual = grep.textFilter(grep);
-        List<String> expected = Arrays.asList(
+        Grep grep = new Grep(false, true, false, "GoodBye", "simpleTest.txt");
+        List<String> actual = grep.textFilter();
+        List<String> expected = List.of(
                 "текст текст GOODBYE",
                 "текст текст goodbye",
                 "текст текст GoodBye",
@@ -48,39 +45,33 @@ public class Tests {
 
     @Test
     public void iv_Test() { //grep -v -i GoodBye simpleTest.txt
-        grep = new Grep(true, true, false, "GoodBye", "simpleTest.txt");
-        List<String> actual = grep.textFilter(grep);
-        List<String> expected = Arrays.asList("тест текст", "GoodBee текст", "2345678");
+        Grep grep = new Grep(true, true, false, "GoodBye", "simpleTest.txt");
+        List<String> actual = grep.textFilter();
+        List<String> expected = List.of("тест текст", "GoodBee текст", "2345678");
         assertEquals(expected, actual);
     }
 
     @Test
-    public void emptyFileTest() { //grep hello emptyFileTest.txt
-        grep = new Grep(false, false, false, "hello", "emptyFileTest.txt");
-        assertThrows(IllegalStateException.class, () -> grep.textFilter(grep));
-    }
-
-    @Test
     public void emptyLinesTest() { //grep hello emptyLinesTest.txt
-        grep = new Grep(false, false, false, "hello", "emptyLinesTest.txt");
-        List<String> actual = grep.textFilter(grep);
-        List<String> expected = Arrays.asList("hello", "hello");
+        Grep grep = new Grep(false, false, false, "hello", "emptyLinesTest.txt");
+        List<String> actual = grep.textFilter();
+        List<String> expected = List.of("hello", "hello");
         assertEquals(expected, actual);
     }
 
     @Test
     public void invertedEmptyLinesTest() { //grep -v hello emptyLinesTest.txt
-        grep = new Grep(true, false, false, "hello", "emptyLinesTest.txt");
-        List<String> actual = grep.textFilter(grep);
-        List<String> expected = Collections.singletonList("hel");
+        Grep grep = new Grep(true, false, false, "hello", "emptyLinesTest.txt");
+        List<String> actual = grep.textFilter();
+        List<String> expected = List.of("hel");
         assertEquals(expected, actual);
     }
 
     @Test
     public void r_Test() { //grep -r [a-z] simpleTest.txt
-        grep = new Grep(false, false, true, "[a-z]", "simpleTest.txt");
-        List<String> actual = grep.textFilter(grep);
-        List<String> expected = Arrays.asList(
+        Grep grep = new Grep(false, false, true, "[a-z]", "simpleTest.txt");
+        List<String> actual = grep.textFilter();
+        List<String> expected = List.of(
                 "GoodBee текст",
                 "текст текст goodbye",
                 "текст текст GoodBye",
@@ -90,9 +81,9 @@ public class Tests {
 
     @Test
     public void vr_Test() { //grep -v -r [a-z] simpleText.txt
-        grep = new Grep(true, false, true, "[a-z]", "simpleTest.txt");
-        List<String> actual = grep.textFilter(grep);
-        List<String> expected = Arrays.asList(
+        Grep grep = new Grep(true, false, true, "[a-z]", "simpleTest.txt");
+        List<String> actual = grep.textFilter();
+        List<String> expected = List.of(
                 "тест текст",
                 "текст текст GOODBYE",
                 "2345678");
@@ -101,9 +92,9 @@ public class Tests {
 
     @Test
     public void ir_Test() { //grep -i -r [a-z] simpleText.txt
-        grep = new Grep(false, true, true, "[a-z]", "simpleTest.txt");
-        List<String> actual = grep.textFilter(grep);
-        List<String> expected = Arrays.asList(
+        Grep grep = new Grep(false, true, true, "[a-z]", "simpleTest.txt");
+        List<String> actual = grep.textFilter();
+        List<String> expected = List.of(
                 "GoodBee текст",
                 "текст текст GOODBYE",
                 "текст текст goodbye",
@@ -115,49 +106,49 @@ public class Tests {
 
     @Test
     public void vir_Test() { //grep -v -i -r [a-z] simpleText.txt
-        grep = new Grep(true, true, true, "[a-z]", "simpleTest.txt");
-        List<String> actual = grep.textFilter(grep);
-        List<String> expected = Arrays.asList("тест текст", "2345678");
+        Grep grep = new Grep(true, true, true, "[a-z]", "simpleTest.txt");
+        List<String> actual = grep.textFilter();
+        List<String> expected = List.of("тест текст", "2345678");
         assertEquals(expected, actual);
     }
 
     @Test
     public void stringOrPatternTest() { //grep [aob] stringOrPatternTest.txt
-        grep = new Grep(false, false, false, "[aob]", "stringOrPatternTest.txt");
-        List<String> actual = grep.textFilter(grep);
-        List<String> expected = Arrays.asList("[aob]", "[aob] 23");
+        Grep grep = new Grep(false, false, false, "[aob]", "stringOrPatternTest.txt");
+        List<String> actual = grep.textFilter();
+        List<String> expected = List.of("[aob]", "[aob] 23");
         assertEquals(expected, actual);
     }
 
     @Test
     public void i_stringOrPatternTest() { //grep -i [aob] stringOrPatternTest.txt
-        grep = new Grep(false, true, false, "[aob]", "stringOrPatternTest.txt");
-        List<String> actual = grep.textFilter(grep);
-        List<String> expected = Arrays.asList("[aob]", "[aob] 23", "[AOB]");
+        Grep grep = new Grep(false, true, false, "[aob]", "stringOrPatternTest.txt");
+        List<String> actual = grep.textFilter();
+        List<String> expected = List.of("[aob]", "[aob] 23", "[AOB]");
         assertEquals(expected, actual);
     }
 
     @Test
     public void r_stringOrPatternTest() { //grep -r [aob] stringOrPatternTest.txt
-        grep = new Grep(false, false, true, "[aob]", "stringOrPatternTest.txt");
-        List<String> actual = grep.textFilter(grep);
-        List<String> expected = Arrays.asList("[aob]", "aboobaboabaobao", "[aob] 23");
+        Grep grep = new Grep(false, false, true, "[aob]", "stringOrPatternTest.txt");
+        List<String> actual = grep.textFilter();
+        List<String> expected = List.of("[aob]", "aboobaboabaobao", "[aob] 23");
         assertEquals(expected, actual);
     }
 
     @Test
     public void ir_stringOrPatternTest() { //grep -i -r [aob] stringOrPatternTest.txt
-        grep = new Grep(false, true, true, "[aob]", "stringOrPatternTest.txt");
-        List<String> actual = grep.textFilter(grep);
-        List<String> expected = Arrays.asList("[aob]", "aboobaboabaobao", "[aob] 23", "[AOB]");
+        Grep grep = new Grep(false, true, true, "[aob]", "stringOrPatternTest.txt");
+        List<String> actual = grep.textFilter();
+        List<String> expected = List.of("[aob]", "aboobaboabaobao", "[aob] 23", "[AOB]");
         assertEquals(expected, actual);
     }
 
     @Test
     public void vir_stringOrPatternTest() { //grep -v -i -r [aob] stringOrPatternTest.txt
-        grep = new Grep(true, true, true, "[aob]", "stringOrPatternTest.txt");
-        List<String> actual = grep.textFilter(grep);
-        List<String> expected = Collections.singletonList("rtrtrtrtrttr");
+        Grep grep = new Grep(true, true, true, "[aob]", "stringOrPatternTest.txt");
+        List<String> actual = grep.textFilter();
+        List<String> expected = List.of("rtrtrtrtrttr");
         assertEquals(expected, actual);
     }
 }
